fix hamburger menu not showing on safari

--- a/style.css
+++ b/style.css
@@ -203,12 +203,13 @@ textarea {
 .menu-btn {
   cursor: pointer;
   display: none;
-  /* position: absolute; */
 }
 
 /* < !-- ! Font Awesome Pro 6.3.0 by @fontawesome - https: //fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --> */
 .menu-btn:after {
-  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'><path d='M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z' /></svg>");
+  content: '';
+  background-image: url("assets/icon.svg");
+  background-repeat: no-repeat;
   display: flex;
   width: 25px;
   height: 25px;
